fix: adjust header position to include bottom spacing

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -1,6 +1,7 @@
 .position {
   position: fixed;
   top: 0;
+  bottom: 5;
   left: 0;
   right: 0;
   z-index: 100;
